fix sidebar col alignment

--- a/css/print.css
+++ b/css/print.css
@@ -70,8 +70,11 @@ a[href]:after {
 }
 #sidebar ul {
   list-style-type: none;
-  margin: 0;
+  margin: 0 0 0 -15px;
   padding: 0;
+}
+#contact ul {
+  margin: 0;
 }
 
 .container {
