--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,12 @@ a[href]:after {
 }
 #sidebar ul {
   list-style-type: none;
-  margin: 0;
+  margin: 0 0 0 -15px;
   padding: 0;
+}
+
+#contact ul {
+  margin: 0;
 }
 
 @media screen and (min-width: 992px) {
